90 fixed button styles & legend alignment

--- a/blocks/performance-specifications/performance-specifications.css
+++ b/blocks/performance-specifications/performance-specifications.css
@@ -1,7 +1,6 @@
-/* stylelint-disable no-descending-specificity */
-
 .performance-specifications {
-  --gold-button-background: #b3976b;
+  --gold-button-background: var(--c-primary-gold);
+  --specs-grid-template-columns: 1fr;
 }
 
 .performance-specifications .category-tablist[role="tablist"] {
@@ -9,13 +8,10 @@
 }
 
 .performance-specifications .category-tablist [role="tab"] {
-  --tab-inactive-text-color: #8d8d8d;
-  --tab-inactive-border-color: #393939;
-
   color: var(--c-secondary-steel);
   width: 33vw;
-  transition: .5s all;
-  border-bottom: 3px solid var(--tab-inactive-border-color);
+  transition: 0.5s all;
+  border-bottom: 3px solid var(--navigation-line-default-color);
   padding-bottom: 0.7em;
   padding-left: 0;
   padding-right: 0;
@@ -58,6 +54,7 @@
   align-items: flex-start;
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
 .performance-specifications .engine-tablist [role="tab"] {
   background-color: var(--c-primary-white);
   font-size: var(--body-font-size-s);
@@ -81,21 +78,16 @@
   background-color: var(--button-tertiary-white-hover);
 }
 
-
 .performance-specifications .details-panel {
-  display: flex;
-  gap: 50px;
-}
-
-.performance-specifications .details-panel dl {
-  flex: 1;
+  display: grid;
+  grid-template-columns: var(--specs-grid-template-columns);
 }
 
 .performance-specifications .details-panel dl dt {
   font-size: var(--body-font-size-xs);
   text-transform: uppercase;
   line-height: 1em;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   padding-top: 1.2em;
   padding-right: 0;
   padding-left: 0;
@@ -104,24 +96,14 @@
 .performance-specifications .details-panel dl dd {
   line-height: 1em;
   font-size: var(--body-font-size-xs);
-  letter-spacing: -.015em;
+  letter-spacing: -0.015em;
   padding: 0.5em 0 0;
   margin-left: 0;
   margin-bottom: 1.2em;
 }
 
-.performance-specifications .details-panel a.download-specs {
-  background-color: var(--gold-button-background);
-  font-size: var(--body-font-size-s);
-  border-radius: 4px;
-  padding: 0.6em 0.7em;
-  line-height: 1em;
-}
-
-.performance-specifications .details-panel a.download-specs:hover {
-  text-decoration: none;
-  color: var(--c-primary-black);
-  border: 2px solid currentcolor;
+.details-panel .key-specs {
+  max-width: 290px;
 }
 
 .details-panel .loading-spinner {
@@ -129,7 +111,7 @@
   width: 2.5em;
   height: 2.5em;
   border: 0.4em solid #eee;
-  border-top-color: #3E67EC;
+  border-top-color: #3e67ec;
   border-radius: 50%;
   animation: loadingspin 1s linear infinite;
   position: relative;
@@ -139,19 +121,23 @@
 
 @keyframes loadingspin {
   100% {
-    transform: rotate(360deg)
+    transform: rotate(360deg);
   }
 }
 
 .performance-specifications .performance-chart {
   width: 100%;
   min-height: 480px;
-  flex: 3;
 }
 
-@media screen and (max-width: 768px) {
-  .performance-specifications .details-panel {
-    flex-direction: column;
+@media (min-width: 768px) {
+  .performance-specifications {
+    --specs-grid-template-columns: 1fr 3fr;
   }
 }
 
+@media (min-width: 1200px) {
+  .details-panel .key-specs {
+    width: 290px;
+  }
+}
